include/test/xmltesttools.hxx
@@ -96,6 +96,9 @@ protected:
      * Assert that rXPath exists, has exactly 1 result set nodes and does *not* have an attribute named rAttribute.
      */
     void          assertXPathNoAttribute(const xmlDocUniquePtr& pXmlDoc, const OString& rXPath, const OString& rAttribute);
+    // Assert that the node name of the single node returned by an XPath is as specified,
+    // e.g. to check order of elements, where getXPathPosition is unapplicable
+    void assertXPathNodeName(const xmlDocUniquePtr& pXmlDoc, const OString& rXPath, const OString& rExpectedName);
 
     static void registerODFNamespaces(xmlXPathContextPtr& pXmlXpathCtx);
     static void registerOOXMLNamespaces(xmlXPathContextPtr& pXmlXpathCtx);
